--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,7 @@
 }
 
 .wrapper__game {
+  position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   width: 500px;
@@ -31,4 +32,8 @@
   height: 50px;
   background-color: aquamarine;
   border: 1px solid grey;
+}
+
+.el {
+  background-color: red;
 }
